src/objects/Apttus_Config2__RelatedProduct__c.object
<CustomObject>
    <description>Related products are for upsell, cross sell or related products (search helper)</description>
    <fields>
        <fullName>Apttus_Config2__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The base product to which other products are associated.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Products</relationshipLabel>
        <relationshipName>RelatedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Rank__c</fullName>
        <description>Rank of the related products</description>
        <label>Rank</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The accessory or up sell product</description>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Base Products (Related Product)</relationshipLabel>
        <relationshipName>BaseProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelationType__c</fullName>
        <description>The relationship type of the related product.</description>
        <label>Relationship Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up Sell</fullName>
                </value>
                <value>
                    <fullName>Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Service and Support</fullName>
                </value>
                <value>
                    <fullName>Compatible</fullName>
                </value>
                <value>
                    <fullName>Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Product</label>
    <nameField>
        <displayFormat>RP-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>